# phoenixapi-v1

./: .coveragerc  .gitignore  MANIFEST.in  README.md  docker-startup.sh  install-deps-alpine.sh  paste_develop.ini  paste_prod.ini  paste_pytest.ini  paste_test.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yml  build_prod.yml  test.yml
alembic/: env.py
alembic/versions/: 02ae1a8699c6_add_agenda_end_time.py  04aeca7278ec_add_gdpr_consent_table.py  0951a436562c_store_the_avatar_of_our_mappings.py  09fab2ff4d15_ticket_totp.py  0cb24597d9c2_tickets_are_now_able_to_be_checked_in.py  0eee850a7ace_multitenant_test.py  1bc50fd4843e_add_consent_withdrawal_code.py  1d65088f1aae_events_have_an_optional_location.py  21cbd812c638_added_friendship_feature.py  22f3a9c508e7_add_application_prompt_to_crew.py  29d94a752ab2_ticket_transfer_object.py  2d7a36f1a5a5_add_ticket_voucher.py  358486e14fb6_card_order.py  428c56eeef7b_password_reset_code.py  42c094de65ac_store_payment_id.py  45b6be09b41d_multitenant_test_2.py  49cebe88616e_ticket_totp.py  4c3c6923b650_grants_admission.py  5f9f040772ab_add_consent_reversal_code.py  60fce51123b5_fix_lack_of_event_uuid_in_position_.py  66f31c1d0613_position_mapping.py  69f2b77c9ef1_initial_migration.py  7c529d07d428_created_infoscreen_entry.py  8182fe1f2491_improved_agenda_system.py  8cad5b097f8b_events_can_have_an_age_limit.py  973632b0d6e9_add_discord_mapping_tables.py  9a8bb21294a3_events_have_different_age_limit_for_.py  a1e2c51ddaac_multitenancy.py  a40ec93ac7aa_payments_are_connected_to_an_event.py  ae6348f3ed63_.py  b4846647b0de_add_application_crew_mapping_table.py  b648caf8d8fb_vanity_positions.py  b94b6a0a3aeb_improved_agenda_system.py  ba65684cc98b_add_consent_withdrawal_code.py  c2fb90349bde_applications_can_be_hidden.py  d5d4e0ac460b_add_membership_information_to_ticket.py  eeb47a836ce0_ticket_transfer_can_be_reverted.py
docker/development/: Dockerfile
docker/production/: Dockerfile
docker/test/: Dockerfile
phoenixRest/: __init__.py  resource.py  roles.py  routes.py  security.py
phoenixRest/features/: crew_card.py  discord.py  pillow_renderer.py
phoenixRest/mailTemplates/: application_received.jinja2  application_response.jinja2  avatar_state_changed.jinja2  discord_oauth_added.jinja2  discord_oauth_removed.jinja2  forgotten.jinja2  forgotten_notice.jinja2  gdpr_mail.jinja2  necessary_mail.jinja2  registration.jinja2  ticket_received.jinja2  ticket_transfer_reverted_to_recipient.jinja2  ticket_transfer_reverted_to_sender.jinja2  ticket_transferred_to_recipient.jinja2  ticket_transferred_to_sender.jinja2  ticket_voucher_burned.jinja2  ticket_voucher_received.jinja2  tickets_minted.jinja2
phoenixRest/mappers/: application.py  crew.py  event.py  position.py  position_mapping.py  row.py  seat.py  seatmap.py  seatmap_background.py  ticket.py  user.py
staticContent/: package.json  rollup.config.js
testing/: .db_env  .env  docker-compose.yml  test.sh
(+179 files in other folders)
