[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["phoenixRest"]

[project]
name = "phoenixRest"
version = "1.0.0"
requires-python = ">=3.10"
description = "Open source event management system"
readme = "README.md"

dependencies = [
    'pyramid==2.0.2',
    'pyramid_chameleon==0.3',
    'pyramid_tm==2.6',
    'pyramid_jinja2==2.10.1',
    'pyramid-jwt==1.6.1',
    'sqlalchemy==2.0.42',
    'gunicorn==23.0.0',
    'zope.sqlalchemy==3.1',
    'alembic==1.16.4',
    'sqlalchemy_utils==0.41.2',
    'passlib==1.7.4',
    'argon2_cffi==25.1.0',
    'qrcode==8.2',
    'requests==2.32.4',
    'sentry-sdk==2.34.1',
    'Pillow==11.3.0',
    'stripe==12.4.0',
    'mistune==3.1.3',
    'pika==1.3.2',
    "google-api-python-client",
    "google-auth"
]

[project.entry-points."paste.app_factory"]
main = "phoenixRest:main"

[project.scripts]
mailWorker = "phoenixRest.scripts.worker:main"

[project.optional-dependencies]

dev = [
    'pyramid_debugtoolbar==4.12.1',
    'pycodestyle==2.14.0',
    'pytest==8.4.1',
    'pytest-cov==6.2.1',
    'webtest==3.0.6',
]
